--- a/frontend/csyllabus/src/app/core/core.component.html
+++ b/frontend/csyllabus/src/app/core/core.component.html
@@ -9,8 +9,8 @@
       <mat-tab label="Comparator">Content 2</mat-tab>
     </mat-tab-group>
   </div>
-
-
-<explorer-result [courses]="explorerResult"></explorer-result>
-
+<div id="explorer-result-component">
+  <br>
+  <explorer-result [courses]="explorerResult"></explorer-result>
+</div>
 </div>
