--- a/frontend/csyllabus/src/app/core/core.component.css
+++ b/frontend/csyllabus/src/app/core/core.component.css
@@ -28,22 +28,19 @@ h2{
     margin-bottom: 0%;
     margin-top: 10%;
   }
-.container {
+.bgexplorer .container {
     align-self: center;
-    margin: 20px;
+
     background: white;
     max-width: 80%;
-    max-height: 150%;
-    position: relative;
-    margin-left: 20%;
-    margin-right: 20%;
-    margin-bottom: 20%;
-    margin-top: 0%;
+    margin-bottom: 200px;
     border-radius: 5px;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     transition: all 0.3s cubic-bezier(.25,.8,.25,1);
-    background-color: rgba(255,255,255,0.92);
+    background-color: rgba(255,255,255,0.7);
 }
+
+
 h2{
     color: white;
     font-size-adjust: 20%;
@@ -61,3 +58,24 @@ h2{
   z-index: 1;
   position: relative;
 }
+
+.bgexplorer {
+   max-width: 100%;
+   width: 100%;
+   position:absolute;
+   top: 0;
+   right: 0;
+   min-height: 45.5em;
+   height: 100vh !important;
+   max-height: 100%;
+/* Background Gradient for Monochromatic Colors */
+background: #FC466B ;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #3F5EFB , #FC466B );  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #3F5EFB , #FC466B ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+
+   background-size: cover;
+   background-position: center;
+}
+
+
