--- a/frontend/csyllabus/src/app/core/ferResults/ferResult.component.html
+++ b/frontend/csyllabus/src/app/core/ferResults/ferResult.component.html
@@ -1,21 +1,39 @@
+<div class="container" *ngIf="courses">
 
-<div *ngFor="let course of courses">
-<div class="courseCard">
+  <div *ngIf="courses && courses.length > 0"
+       class="puls-rings-outer">
+    <div class="puls-rings"></div>
+  </div>
+
+  <div *ngFor="let course of courses" class="courseCard col-md-4">
     <mat-card class="example-card">
-  <mat-card-header>
-    <div mat-card-avatar class="example-header-image"></div>
-      <mat-card-title><h1>{{ course.name }}</h1></mat-card-title>
-    <mat-card-subtitle><h2>FER, Zagreb, Croatia</h2></mat-card-subtitle>
-  </mat-card-header>
-  <mat-card-content>
-    <p class="courseDescription">
-    {{ course.description}}
-    </p>
-  </mat-card-content>
-  <mat-card-actions>
-    <button mat-button>LIKE</button>
-    <button mat-button>SHARE</button>
-  </mat-card-actions>
-</mat-card>
+      <mat-card-header>
+        <div mat-card-avatar class="example-header-image"></div>
+        <mat-card-title>
+          <p class="cours-result-card-title">{{ course.name }}</p></mat-card-title>
+        <mat-card-subtitle>
+          <p class="cours-result-card-subtitle">
+            <span *ngIf="course.faculty">{{course.faculty}}, </span>
+            <span *ngIf="course.university">{{course.university}}, </span>
+            <span *ngIf="course.city">{{course.city}}, </span>
+            <span *ngIf="course.country">{{course.country}} </span></p></mat-card-subtitle>
+      </mat-card-header>
+      <mat-card-content>
+        <p class="courseDescription">
+          {{ course.short_description}}
+        </p>
+      </mat-card-content>
+      <mat-card-actions>
+        <!--<button mat-button>LIKE</button>
+        <button mat-button>SHARE</button>-->
+      </mat-card-actions>
+    </mat-card>
+
+  </div>
+  <div *ngIf="!courses || courses.length === 0" style="padding: 50px; ">
+    <div class="puls-rings-outer">
+    <div class="puls-rings"></div>
+  </div>
+    <div>No courses for given search!</div>
+  </div>
 </div>
-    </div>
