--- a/frontend/csyllabus/src/styles.css
+++ b/frontend/csyllabus/src/styles.css
@@ -2,3 +2,74 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:300');
 @import url('https://fonts.googleapis.com/css?family=Inconsolata:400,700');
+
+* {
+    box-sizing: border-box;
+}
+.row::after {
+    content: "";
+    clear: both;
+    display: block;
+}
+[class*="col-"] {
+    float: left;
+    padding: 15px;
+}
+
+/* For desktop: */
+.col-md-1 {width: 8.33%;}
+.col-md-2 {width: 16.66%;}
+.col-md-3 {width: 25%;}
+.col-md-4 {width: 33.33%;}
+.col-md-5 {width: 41.66%;}
+.col-md-6 {width: 50%;}
+.col-md-7 {width: 58.33%;}
+.col-md-8 {width: 66.66%;}
+.col-md-9 {width: 75%;}
+.col-md-10 {width: 83.33%;}
+.col-md-11 {width: 91.66%;}
+.col-md-12 {width: 100%;}
+
+@media only screen and (max-width: 768px) {
+    /* For mobile phones: */
+    [class*="col-"] {
+        width: 100%;
+    }
+}
+
+.container {
+  margin-left: auto;
+  margin-right: auto;
+}
+@media (min-width: 568px) {
+  .container {
+    width: 550px;
+  }
+}
+@media (min-width: 992px) {
+  .container {
+    width: 970px;
+  }
+}
+@media (min-width: 1200px) {
+  .container {
+    width: 1170px;
+  }
+}
+
+.puls-rings {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background-color: rgba(63, 94, 251, 0.2);
+  box-shadow: 0px 30px 0px rgba(242, 42, 252, 0.21), 0px 60px 0px rgba(252, 70, 107, 0.25);
+  -webkit-animation: pulsate 1s ease-out;
+  opacity: 1.0
+}
+.puls-rings-outer {
+  height: 120px;
+  text-align: center;
+  width: 100%;
+  overflow: hidden;
+}
