--- a/frontend/csyllabus/src/app/core/core.component.css
+++ b/frontend/csyllabus/src/app/core/core.component.css
@@ -37,7 +37,8 @@ h2{
     border-radius: 5px;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     transition: all 0.3s cubic-bezier(.25,.8,.25,1);
-    background-color: rgba(255,255,255,0.7);
+    background-color: rgba(255,255,255,0.85);
+  position: relative;
 }
 
 
@@ -51,7 +52,7 @@ h2{
 }
 
 .variable-background {
-  position: fixed; top: 0; left: 0; z-index: 0; height: 100vh; width: 100%; object-fit: cover;
+  position: absolute; top: 0; left: 0; z-index: 0; height: 100vh; width: 100%; object-fit: cover;
 }
 
 .bgexplorer h1, .bgexplorer h2, .bgexplorer .logo-img {
