--- a/frontend/csyllabus/src/app/core/core.component.html
+++ b/frontend/csyllabus/src/app/core/core.component.html
@@ -5,7 +5,8 @@
   <h2>Global Computer Science Repository</h2>
   <div class="container" align="center">
     <mat-tab-group>
-      <mat-tab label="Explorer"><app-explorer (explorerResult)="fetchExplorerResult($event)" (backgroundImage)="changeBackgroundImage($event)"></app-explorer></mat-tab>
+      <mat-tab label="Explorer"><app-explorer (explorerResult)="fetchExplorerResult($event)"
+                                              (backgroundImage)="changeBackgroundImage($event)"></app-explorer></mat-tab>
       <mat-tab label="Comparator">Content 2</mat-tab>
     </mat-tab-group>
   </div>
