showng score rank in explorer results

--- a/frontend/csyllabus/src/app/core/explorer/search/explorer.component.html
+++ b/frontend/csyllabus/src/app/core/explorer/search/explorer.component.html
@@ -81,7 +81,7 @@
 <div id="state" *ngIf="!queryCountry" style="padding: 50px;">
 
 </div>
-<div class="button" style="margin-bottom: 0px; margin-top: 25px;">
+<div class="button" style="margin-top: 25px;">
   <button mat-raised-button color="primary" (click)="exploreCourses()" margin=10px>Explore</button>
 </div>
 
