--- a/frontend/csyllabus/src/app/core/core.component.css
+++ b/frontend/csyllabus/src/app/core/core.component.css
@@ -1,50 +1,52 @@
 
-
 .bgexplorer {
-    max-width: 100%;
-    width: 100%;
-    position:absolute;
-    top: 0;
-    right: 0;
-    min-height: 45.5em;
-    height: 100vh !important;
-    max-height: 100%;
-    background-color:#0080ff;
-    background-size: cover;
-    background-position: center;
+  max-width: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  right: 0;
+  min-height: 45.5em;
+  height: 100vh !important;
+  max-height: 100%;
+  background-color: #0080ff;
+  background-size: cover;
+  background-position: center;
 }
-h1{
-    font-family:  'Inconsolata';
-    color: white;
-    margin-bottom: 0%;
-    margin-top: 0%;
-    font-weight: bold;
-}
-h2{
-    font-family:  'Roboto Condensed', sans-serif;
-    margin-top: 0%;
-}
-.logo {
-    margin-bottom: 0%;
-    margin-top: 10%;
-  }
-.bgexplorer .container {
-    align-self: center;
 
-    background: white;
-    max-width: 80%;
-    margin-bottom: 200px;
-    border-radius: 5px;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
-    background-color: rgba(255,255,255,0.85);
+h1 {
+  font-family: 'Inconsolata';
+  color: white;
+  margin-bottom: 0%;
+  margin-top: 0%;
+  font-weight: bold;
+}
+
+h2 {
+  font-family: 'Roboto Condensed', sans-serif;
+  margin-top: 0%;
+}
+
+.logo {
+  margin-bottom: 0%;
+  margin-top: 10%;
+}
+
+.bgexplorer .container {
+  align-self: center;
+
+  background: white;
+  max-width: 80%;
+  margin-bottom: 200px;
+  border-radius: 5px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
+  background-color: rgba(255, 255, 255, 0.85);
   position: relative;
 }
 
-
-h2{
-    color: white;
-    font-size-adjust: 20%;
+h2 {
+  color: white;
+  font-size-adjust: 20%;
 }
 
 .keywords-chip-list {
@@ -52,7 +54,13 @@ h2{
 }
 
 .variable-background {
-  position: absolute; top: 0; left: 0; z-index: 0; height: 100vh; width: 100%; object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 0;
+  height: 100vh;
+  width: 100%;
+  object-fit: cover;
 }
 
 .bgexplorer h1, .bgexplorer h2, .bgexplorer .logo-img {
@@ -61,22 +69,20 @@ h2{
 }
 
 .bgexplorer {
-   max-width: 100%;
-   width: 100%;
-   position:absolute;
-   top: 0;
-   right: 0;
-   min-height: 45.5em;
-   height: 100vh !important;
-   max-height: 100%;
-/* Background Gradient for Monochromatic Colors */
-background: #FC466B ;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #3F5EFB , #FC466B );  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #3F5EFB , #FC466B ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  max-width: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  right: 0;
+  min-height: 45.5em;
+  height: 100vh !important;
+  max-height: 100%;
+   /*Background Gradient for Monochromatic Colors*/
+  background: #FC466B ;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #3F5EFB , #FC466B );  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #3F5EFB , #FC466B ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
-
-   background-size: cover;
-   background-position: center;
+/*  background-image: url(../../images/world.jpg);*/
+  background-size: cover;
+  background-position: center;
 }
-
-
