--- a/frontend/csyllabus/src/app/core/core.component.html
+++ b/frontend/csyllabus/src/app/core/core.component.html
@@ -1,17 +1,21 @@
 <div class="bgexplorer">
   <img class="variable-background" *ngIf="backgroundImage && backgroundImage != ''" [src]="backgroundImage">
-  <img class="logo-img" src="https://image.ibb.co/fQCOXb/logo.png" height="140" width="140">
+  <div class="core-header" >
+    <img class="logo-img" src="https://image.ibb.co/fQCOXb/logo.png" height="140" width="140">
+    <h2>Global Computer Science Repository</h2>
+  </div>
 
-  <h2>Global Computer Science Repository</h2>
   <div class="container" align="center">
     <mat-tab-group>
-      <mat-tab label="Explorer"><app-explorer (explorerResult)="fetchExplorerResult($event)"
-                                              (backgroundImage)="changeBackgroundImage($event)"></app-explorer></mat-tab>
+      <mat-tab label="Explorer">
+        <app-explorer (explorerResult)="fetchExplorerResult($event)"
+                      (backgroundImage)="changeBackgroundImage($event)"></app-explorer>
+      </mat-tab>
       <mat-tab label="Comparator">Content 2</mat-tab>
     </mat-tab-group>
   </div>
-<div id="explorer-result-component">
-  <br>
-  <explorer-result [courses]="explorerResult"></explorer-result>
-</div>
+  <div id="explorer-result-component">
+    <br>
+    <explorer-result [courses]="explorerResult"></explorer-result>
+  </div>
 </div>
