--- a/frontend/csyllabus/src/app/core/result-cards/result-cards.component.html
+++ b/frontend/csyllabus/src/app/core/result-cards/result-cards.component.html
@@ -31,9 +31,11 @@
       <mat-card-content>
         <p class="courseDescription">
           {{ course.short_description}}
+          <a routerLink="/course/{{course.id}}">See more..</a>
         </p>
       </mat-card-content>
       <mat-card-actions>
+
         <!--<button mat-button>LIKE</button>
         <button mat-button>SHARE</button>-->
       </mat-card-actions>
