--- a/frontend/csyllabus/src/app/core/core.component.html
+++ b/frontend/csyllabus/src/app/core/core.component.html
@@ -1,10 +1,9 @@
 <div class="bgexplorer">
   <img class="variable-background" *ngIf="backgroundImage && backgroundImage != ''" [src]="backgroundImage">
-  <div class="core-header" >
+  <div class="core-header">
     <img class="logo-img" src="https://image.ibb.co/fQCOXb/logo.png" height="140" width="140">
     <h2>Global Computer Science Repository</h2>
   </div>
-
   <div class="container" align="center">
     <mat-tab-group>
       <mat-tab label="Explorer">
@@ -16,6 +15,6 @@
   </div>
   <div id="explorer-result-component">
     <br>
-    <explorer-result [courses]="explorerResult"></explorer-result>
+    <app-result-cards [courses]="explorerResult"></app-result-cards>
   </div>
 </div>
