--- a/frontend/csyllabus/src/app/components/course/course.component.html
+++ b/frontend/csyllabus/src/app/components/course/course.component.html
@@ -1,21 +1,59 @@
 <div>
+    
   <p *ngIf="!course"loading>course:</p>
-
   <div *ngIf="course">
-  <p>Name: {{course.name}}</p>
-  <p>Description: {{course.description}}</p>
-  <p>ECTS: {{course.ects}}</p>
-  <p>English_level: {{course.englishLevel}}</p>
-  <p>Semester: {{course.semester}}</p>
-  <p>Modified: {{course.modified}}</p>
-  <p>Created: {{course.created}}</p>
+    <div class="container">
+    <div class="title">
+        <div style="padding:30px">{{course.name}}</div>
+    </div>
+    <div class="where">
+        <h1>{{course.faculty}}</h1>
+        <h1>{{course.university}}</h1>
+        <img class="logoU" src="http://www.best-masters.com/assets/img/logo_ecole/153.jpg" height="140" width="140">
+        <a href="http://www.university.com"></a>
+        <h1>{{course.city}},  {{course.country}} </h1>
+    </div>
+    <mat-card class="columns">
+    <mat-card class="details">
+      <h2 style="text-align:center">Details</h2>
+        <table align=center>
+            <tr>
+                <td><img src="https://png.icons8.com/debt/color/50/000000"> <b> ECTS</b></td>
+                <td>{{course.ects}}</td>
+            </tr>
+            <tr>
+                <td><img src="https://png.icons8.com/voice-recognition/color/50/000000"><b> English Level</b></td>
+                <td>{{course.englishLevel}}</td>
+             </tr>
+             <tr>
+                <td><img src="https://png.icons8.com/read-online/color/50/000000"><b> Semester</b></td>
+                <td>{{course.semester}}</td>
+             </tr>
+             <tr>
+                <td><img src="https://png.icons8.com/data-backup/color/50/000000"><b> Modified</b></td>
+                <td>{{course.modified}}</td>
+             </tr>
+             <tr>
+                <td><img src="https://png.icons8.com/add-database/color/50/000000"><b>  Created</b></td>
+                <td>{{course.created}}</td>
+             </tr>
+        </table>
+    </mat-card>
+    <mat-card class="social">
+        <h2 style="text-align:center">Evaluations</h2>
+        <h2 style="text-align:center">Comments</h2>
+        <h2  style="text-align:center">Teachers</h2>
+    </mat-card>
+  </mat-card>
+    <mat-card class="description">
+      
+      <h2 style="text-align:center">Description</h2>
+      <p style="margin-bottom:30px;margin-left:30px;margin-right:30px">{{course.description}}</p>
+   </mat-card>
+    </div>
+ 
 
-  <p>Faculty: {{course.faculty}}</p>
-  <p>University: {{course.university}}</p>
-  <p>City: {{course.city}}</p>
-  <p>Country: {{course.country}}</p>
-
+  </div>
 </div>
-
-</div>
+<a href="https://icons8.com">Icon pack by Icons8</a>
 
