There are more sections
We have to define what we want to show in the alpha prototype

--- a/frontend/csyllabus/src/app/components/course/course.component.html
+++ b/frontend/csyllabus/src/app/components/course/course.component.html
@@ -40,10 +40,16 @@
         </table>
     </mat-card>
     <mat-card class="social">
-        <h2 style="text-align:center">Evaluations</h2>
-        <h2 style="text-align:center">Comments</h2>
         <h2  style="text-align:center">Teachers</h2>
+        <img src="http://gamesandlearning.umich.edu/wp-content/uploads/2014/10/teacherprofiles-infographic11.png"height="300" width="300">
     </mat-card>
+  </mat-card>
+
+  <mat-card>
+      <h2 style="text-align:center">Evaluations</h2>
+      <img src="https://png.icons8.com/rating/color/50/000000">
+      <h2 style="text-align:center">Comments</h2>
+      <img src="http://www.free-icons-download.net/images/comments-icon-62900.png"height="50px" width="50px">
   </mat-card>
     <mat-card class="description">
       
