--- a/frontend/csyllabus/src/app/components/not-found/not-found.component.html
+++ b/frontend/csyllabus/src/app/components/not-found/not-found.component.html
@@ -1,3 +1,15 @@
-<p>
-  not-found works!
-</p>
+<!DOCTYPE html>
+<html>
+<head>
+<title>Error</title>
+<link href='//fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800' rel='stylesheet' type='text/css'><!--web font-->
+</head>
+<div class="container">
+				<h2 style="font-size:900%;color:white;margin:5%">4&nbsp;0&nbsp;4</h2>
+				<h1 style="font-size:250%;color:white">Sorry! The page you were looking for could not be found </h1>
+				<h3 style="color:aliceblue">You have been tricked into click on a link that can not be found. Please check the url or click in Go Back if you want to come back</h3>
+        <form>
+                <button mat-raised-button color="primary"  onclick="window.location.href='#'" margin=10px>Go Home</button>
+        </form> 
+</div>
+</html>
