--- a/frontend/csyllabus/src/app/components/course/course.component.html
+++ b/frontend/csyllabus/src/app/components/course/course.component.html
@@ -1,66 +1,50 @@
 <div>
-
-  <p *ngIf="!course" loading>course:</p>
+  <p *ngIf="!course" loading></p>
   <div *ngIf="course">
     <div class="container">
       <div class="title">
         <div style="padding:30px">{{course.name}}</div>
       </div>
       <div class="where">
-        <h1>{{course.faculty}}</h1>
-        <h1>{{course.university}}</h1>
-        <img class="logoU" src="http://www.best-masters.com/assets/img/logo_ecole/153.jpg" height="140" width="140">
+        <h1  style="font-size:200%" >{{course.faculty}}</h1>
+        <h1  style="font-size:170%;    font-weight: bold">{{course.university}}</h1>
+        <img class="logoU" src="http://www.best-masters.com/assets/img/logo_ecole/153.jpg" height="120" width="120">
         <a href="http://www.university.com"></a>
-        <h1>{{course.city}}, {{course.country}} </h1>
+        <h1 style="font-size:150%">{{course.city}}, {{course.country}} </h1>
       </div>
-      <mat-card class="columns">
-        <mat-card class="details">
-          <h2 style="text-align:center">Details</h2>
-          <table align=center>
-            <tr>
-              <td><img src="https://png.icons8.com/debt/color/50/000000"> <b> ECTS</b></td>
-              <td>{{course.ects}}</td>
-            </tr>
-            <tr>
-              <td><img src="https://png.icons8.com/voice-recognition/color/50/000000"><b> English Level</b></td>
-              <td>{{course.englishLevel}}</td>
-            </tr>
-            <tr>
-              <td><img src="https://png.icons8.com/read-online/color/50/000000"><b> Semester</b></td>
-              <td>{{course.semester}}</td>
-            </tr>
-            <tr>
-              <td><img src="https://png.icons8.com/data-backup/color/50/000000"><b> Modified</b></td>
-              <td>{{course.modified}}</td>
-            </tr>
-            <tr>
-              <td><img src="https://png.icons8.com/add-database/color/50/000000"><b> Created</b></td>
-              <td>{{course.created}}</td>
-            </tr>
-          </table>
-        </mat-card>
+      <div class="columns">
+        <div class="details">
+          <div class="subtitle">Details</div>
+          <div style="margin:20px">
+              <h3 style="margin:10px"><img matIcon style="margin-right:10px" src="https://png.icons8.com/debt/color/50/000000" height="50" width="50"> &nbsp; ECTS: &nbsp;  {{course.ects}}</h3>
+              <h3 style="margin:10px"><img matIcon style="margin-right:10px" src="https://png.icons8.com/voice-recognition/color/50/000000" height="50" width="50"> &nbsp; English Level:  &nbsp;   {{course.englishLevel}}</h3> 
+              <h3 style="margin:10px"><img matIcon  style="margin-right:10px" src="https://png.icons8.com/read-online/color/50/000000" height="50" width="50"> &nbsp; Semester: &nbsp;   {{course.semester}}</h3> 
+          </div>
+        </div>
+        <div class="description">
+          <div class="subtitle">Description</div>
+          <p style="margin:20px">{{course.description}}</p>
+        </div>
+        <p><b>Modified: </b>{{course.modified}}&nbsp;&nbsp;&nbsp;<b>Created:  </b>{{course.created}}</p>
+    <!--
         <mat-card class="social">
           <h2 style="text-align:center">Teachers</h2>
           <img src="http://gamesandlearning.umich.edu/wp-content/uploads/2014/10/teacherprofiles-infographic11.png"
                height="300" width="300">
         </mat-card>
-      </mat-card>
-
+      -->    
+      </div>
+<!--
       <mat-card>
         <h2 style="text-align:center">Evaluations</h2>
         <img src="https://png.icons8.com/rating/color/50/000000">
         <h2 style="text-align:center">Comments</h2>
         <img src="http://www.free-icons-download.net/images/comments-icon-62900.png" height="50px" width="50px">
       </mat-card>
-      <mat-card class="description">
-
-        <h2 style="text-align:center">Description</h2>
-        <p style="margin-bottom:30px;margin-left:30px;margin-right:30px">{{course.description}}</p>
-      </mat-card>
+      <img src="https://png.icons8.com/data-backup/color/50/000000"height="30" width="30">
+      <img src="https://png.icons8.com/add-database/color/50/000000"height="30" width="30">
+    -->
     </div>
-
-
   </div>
 </div>
-<a href="https://icons8.com">Icon pack by Icons8</a>
 
