--- a/frontend/csyllabus/src/app/core/result-cards/result-cards.component.html
+++ b/frontend/csyllabus/src/app/core/result-cards/result-cards.component.html
@@ -31,7 +31,7 @@
       <mat-card-content>
         <p class="courseDescription">
           {{ course.short_description}}
-          <a routerLink="/course/{{course.id}}">See more..</a>
+          <a routerLink="/course/{{course.id}}" target=”_blank”>See more..</a>
         </p>
       </mat-card-content>
       <mat-card-actions>
