--- a/frontend/csyllabus/src/app/core/core.component.css
+++ b/frontend/csyllabus/src/app/core/core.component.css
@@ -58,7 +58,7 @@ h2 {
   top: 0;
   left: 0;
   z-index: 0;
-  height: 100vh;
+  height: calc(100vh + 50px);
   width: 100%;
   object-fit: cover;
 }
@@ -82,7 +82,8 @@ h2 {
   background: -webkit-linear-gradient(to right, #3F5EFB , #FC466B );  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to right, #3F5EFB , #FC466B ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
-/*  background-image: url(../../images/world.jpg);*/
+  background-image: url(../../images/world.jpg);
   background-size: cover;
   background-position: center;
+  /*height: 100vh;*/
 }
