--- a/frontend/csyllabus/src/app/core/result-cards/course-dialog/course-dialog.component.html
+++ b/frontend/csyllabus/src/app/core/result-cards/course-dialog/course-dialog.component.html
@@ -31,7 +31,7 @@
              </tr>
               <tr><td style="height:10px"></td></tr>
              <tr>
-                <td>Study: Undergraduate</td>
+                <td>Study: {{course.study_lvl}}</td>
              </tr>
              <tr><td style="height:10px"></td></tr>
              <tr>
