--- a/frontend/csyllabus/src/app/core/core.component.html
+++ b/frontend/csyllabus/src/app/core/core.component.html
@@ -11,7 +11,8 @@
                       (backgroundImage)="changeBackgroundImage($event)"></app-explorer>
       </mat-tab>
       <mat-tab label="Comparator">
-        <app-comparator></app-comparator>
+        <app-comparator (comparatorResult)="fetchComparatorResult($event)"
+                      (backgroundImage)="changeBackgroundImage($event)"></app-comparator>
       </mat-tab>
     </mat-tab-group>
   </div>
