--- a/frontend/csyllabus/src/app/core/result-cards-comparator/result-cards-comparator.component.html
+++ b/frontend/csyllabus/src/app/core/result-cards-comparator/result-cards-comparator.component.html
@@ -1,1 +1,51 @@
-asdsasd
+<div class="container" *ngIf="courses">
+
+  <div *ngIf="courses && courses.length > 0"
+       class="puls-rings-outer">
+    <div class="puls-rings"></div>
+  </div>
+
+  <div *ngFor="let course of courses" class="courseCard col-md-4">
+    <mat-card style="cursor: pointer;" (click)="openDialog(course.id)" class="example-card">
+      <mat-card-header>
+        <!--<div mat-card-avatar class="example-header-image"
+        style="    height: 50px;
+    width: 50px;
+    padding-top: 15px;
+    background-color: rgba(63,94,251,0.49);
+    text-align: center;
+    color: white;">
+          <span style="display: inline-block;
+  vertical-align: middle;
+  line-height: normal;">{{course.rank * 100  | number : '1.2-2'}}
+          </span></div>-->
+        <mat-card-title>
+          <p   class="cours-result-card-title">{{ course.name }}</p></mat-card-title>
+        <mat-card-subtitle>
+          <p class="cours-result-card-subtitle">
+            <span *ngIf="course.faculty">{{course.faculty}}, </span>
+            <span *ngIf="course.university">{{course.university}}, </span>
+            <span *ngIf="course.city">{{course.city}}, </span>
+            <span *ngIf="course.country">{{course.country}} </span></p></mat-card-subtitle>
+      </mat-card-header>
+      <mat-card-content>
+        <p class="courseDescription">
+          {{ course.short_description}}
+
+        </p>
+      </mat-card-content>
+      <mat-card-actions>
+
+        <!--<button mat-button>LIKE</button>
+        <button mat-button>SHARE</button>-->
+      </mat-card-actions>
+    </mat-card>
+
+  </div>
+  <div *ngIf="!courses || courses.length === 0" style="padding: 50px; ">
+    <div class="puls-rings-outer">
+    <div class="puls-rings"></div>
+  </div>
+    <div>No courses for given search!</div>
+  </div>
+</div>
