keyword or explorer service with semicolon

--- a/frontend/csyllabus/src/app/core/comparator/comparator.component.html
+++ b/frontend/csyllabus/src/app/core/comparator/comparator.component.html
@@ -98,3 +98,6 @@
 <div class="button" style="margin-top: 25px;">
   <button mat-raised-button color="primary" (click)="compareCourses()" margin=10px>Compare</button>
 </div>
+<div id="search-component-spinner" *ngIf="comparatorStarted">
+  <mat-spinner></mat-spinner>
+</div>
