--- a/frontend/csyllabus/src/app/core/result-cards-comparator/result-cards-comparator.component.html
+++ b/frontend/csyllabus/src/app/core/result-cards-comparator/result-cards-comparator.component.html
@@ -20,8 +20,9 @@
   line-height: normal;">{{course.rank * 100  | number : '1.2-2'}}
           </span></div>-->
         <mat-card-title>
-          <p   class="cours-result-card-title">{{ course.name }}</p></mat-card-title>
+          <p   class="cours-result-card-title">{{ course.name }} </p></mat-card-title>
         <mat-card-subtitle>
+          <b> Rank: {{course.result * 100  | number : '1.2-2'}} </b>
           <p class="cours-result-card-subtitle">
             <span *ngIf="course.faculty">{{course.faculty}}, </span>
             <span *ngIf="course.university">{{course.university}}, </span>
