--- a/frontend/csyllabus/src/app/core/comparator/comparator.component.html
+++ b/frontend/csyllabus/src/app/core/comparator/comparator.component.html
@@ -1,7 +1,7 @@
 
 <div class="col-md-12">
   <div class="col-md-6">
-    <mat-form-field style="padding-top:50px" class="input">
+    <mat-form-field style="padding-top:30px" class="input">
       <input placeholder="Home University" matInput [formControl]="homeUnivControl"
              [matAutocomplete]="home_univ_auto" [(ngModel)]="queryHomeUniversity" (ngModelChange)="filterFacultiesByHomeUniversity()"
              required>
@@ -14,7 +14,8 @@
 
     <mat-form-field class="input" *ngIf="queryHomeUniversity">
       <input placeholder="Home faculty?" matInput [formControl]="homeFacultiesControl"
-             [matAutocomplete]="home_faculties_auto" [(ngModel)]="queryHomeFaculty" (ngModelChange)="filterProgramsByHomeFaculty()">
+             [matAutocomplete]="home_faculties_auto" [(ngModel)]="queryHomeFaculty" (ngModelChange)="filterProgramsByHomeFaculty()"
+      required>
       <mat-autocomplete #home_faculties_auto="matAutocomplete" [displayWith]="displaySelect">
         <mat-option *ngFor="let faculty of filteredHomeFaculties" [value]="faculty">
           {{ faculty.name }}
@@ -24,7 +25,8 @@
 
     <mat-form-field class="input" *ngIf="queryHomeFaculty">
       <input placeholder="Program?" matInput [formControl]="homeProgramsControl"
-             [matAutocomplete]="home_programs_auto" [(ngModel)]="queryHomeProgram" (ngModelChange)="filterCoursesByHomeProgram()">
+             [matAutocomplete]="home_programs_auto" [(ngModel)]="queryHomeProgram" (ngModelChange)="filterCoursesByHomeProgram()"
+      required>
       <mat-autocomplete #home_programs_auto="matAutocomplete" [displayWith]="displaySelect">
         <mat-option *ngFor="let program of filteredHomePrograms" [value]="program">
           {{ program.name }}
@@ -40,7 +42,8 @@
 
     <mat-form-field class="input" *ngIf="queryHomeProgram">
       <input placeholder="Course?" matInput [formControl]="homeCoursesControl"
-             [matAutocomplete]="home_courses_auto" [(ngModel)]="queryHomeCourse">
+             [matAutocomplete]="home_courses_auto" [(ngModel)]="queryHomeCourse"
+      required>
       <mat-autocomplete #home_courses_auto="matAutocomplete" [displayWith]="displaySelect">
         <mat-option *ngFor="let course of filteredHomeCourses" [value]="course">
           {{ course.name }}
@@ -52,7 +55,7 @@
   </div>
 
   <div class="col-md-6">
-    <mat-form-field style="padding-top:50px" class="input">
+    <mat-form-field style="padding-top:30px" class="input">
       <input placeholder="Where do you want to study?" matInput [formControl]="coursesControl"
              [matAutocomplete]="countries_auto" [(ngModel)]="queryCountry" (ngModelChange)="filterCitiesByCountry()"
              required>
