--- a/frontend/csyllabus/src/styles.css
+++ b/frontend/csyllabus/src/styles.css
@@ -41,6 +41,14 @@
   margin-left: auto;
   margin-right: auto;
 }
+
+@media (max-width: 567px) {
+  .container {
+    width: 95% !important;
+    max-width: 90% !important;
+  }
+}
+
 @media (min-width: 568px) {
   .container {
     width: 550px;
@@ -62,8 +70,8 @@
   width: 20px;
   height: 20px;
   border-radius: 50%;
-  background-color: rgba(63, 94, 251, 0.2);
-  box-shadow: 0px 30px 0px rgba(242, 42, 252, 0.21), 0px 60px 0px rgba(252, 70, 107, 0.25);
+  background-color: rgba(63, 94, 251, 0.4);
+  box-shadow: 0px 30px 0px rgba(242, 42, 252, 0.45), 0px 60px 0px rgba(252, 70, 107, 0.5);
   -webkit-animation: pulsate 1s ease-out;
   opacity: 1.0
 }
@@ -73,3 +81,30 @@
   width: 100%;
   overflow: hidden;
 }
+
+.custom-scrollbar::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color: #F5F5F5;
+}
+
+.custom-scrollbar::-webkit-scrollbar
+{
+	width: 12px;
+	background-color: #F5F5F5;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: rgba(63, 94, 251, 0.56);
+}
+
+
+
+.mat-dialog-container {
+  padding: 0 !important;
+}
+
