--- a/frontend/csyllabus/src/app/components/course/course.component.css
+++ b/frontend/csyllabus/src/app/components/course/course.component.css
@@ -1,21 +1,22 @@
 .container {
-    margin-top: 5%;
+    margin-top: 1.5%;
     align-self: center;
     background: white;
-    max-width: 90%;
-    margin-bottom: 5%;
+    width: 97%;
+    max-width: 97%;
+    margin-bottom: 1.5%;
     border-radius: 5px;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
     background-color: rgba(255, 255, 255, 0.85);
     position: relative;
-webkit-box-shadow: 0px 0px 16px -5px rgba(0,0,0,0.75);
-moz-box-shadow: 0px 0px 16px -5px rgba(0,0,0,0.75);
-box-shadow: 0px 0px 16px -5px rgba(0,0,0,0.75);
+-webkit-box-shadow: 0px 0px 16px -5px rgba(0,0,0,0.75);
+   -moz-box-shadow: 0px 0px 16px -5px rgba(0,0,0,0.75);
+    -box-shadow: 0px 0px 16px -5px rgba(0,0,0,0.75);
   }
 .title{
     font-family: 'Roboto', sans-serif;
-    font-size: 300%;
+    font-size: 180%;
     font-weight: bold;
     border-radius: 5px;
     color: white;
@@ -23,33 +24,20 @@ box-shadow: 0px 0px 16px -5px rgba(0,0,0,0.75);
 }
 .subtitle{
     font-family: 'Roboto', sans-serif;
-    font-size: 200%;
+    font-size: 110%;
+    font-weight: bold;
     border-radius: 5px;
-    padding: 10px;
+    padding: 5px;
     color: white;
     background-color: rgba(11, 14, 33, 0.85); 
     text-align: center;
 }
-table, th, td {
-    border: 0px solid rgb(208, 206, 206);
-    border-collapse: collapse;
-    vertical-align: center;
-}
-td{
-    text-align: left;
-    padding-right: 10px;
-    padding-left: 10px;
-}
-table {
-    border-spacing: 1px;
-    background-color:rgba(255, 255, 255, 0.768);
-    margin:15px;
-}
+
 @media only screen and (min-width: 900px){
 .description{
     text-align : justify;
     float: left;
-    width: 70%;
+    width: 75%;
     margin: 2%;
     margin-right: 0% !important;
     border-radius: 5px;
@@ -60,7 +48,7 @@ h3{
 	text-align:left;
 }
 .details{
-    width: 24%;
+    width: 19%;
     float: left;
     margin: 2%;
     margin-right: 0% !important;
@@ -75,12 +63,12 @@ h3{
     border-radius: 5px;
     align-self: center;
     background: white;
-    padding-bottom: 20px;
+    padding-bottom: 10px;
 }
 .details{
     margin: 2%;
     text-align : center;
-    padding-bottom: 20px;
+    padding-bottom: 10px;
     border-radius: 5px;
     align-self: center;
     background: white;
@@ -94,7 +82,7 @@ h3{
 }
 */
 .columns{
-    background-color:rgba(232, 228, 228, 0.809);
+    background-color:rgba(242, 242, 242, 0.809);
 }
 .columns:after{
     content: "";
