--- a/frontend/csyllabus/src/app/core/core.component.html
+++ b/frontend/csyllabus/src/app/core/core.component.html
@@ -1,8 +1,8 @@
+
 <div class="bgexplorer">
   <img class="variable-background" *ngIf="backgroundImage && backgroundImage != ''" [src]="backgroundImage">
   <div class="core-header">
-    <img class="logo-img" src="https://image.ibb.co/fQCOXb/logo.png" height="140" width="140">
-    <h2>Global Computer Science Repository</h2>
+      <app-navbar></app-navbar>
   </div>
   <div class="container custom-scrollbar" align="center">
     <mat-tab-group (selectedTabChange)="changeResultCard($event)" mat-stretch-tabs >
