Starting page About and Added Footer
Also, I Added a new module that includes the Navbar and the Footer called AlwaysPresent Module. I added it because we need to use the topbar and the footer in more than one module :D

--- a/frontend/csyllabus/src/app/components/about/about.component.html
+++ b/frontend/csyllabus/src/app/components/about/about.component.html
@@ -1,3 +1,103 @@
-<p>
-  about works!
-</p>
+<!DOCTYPE html>
+<div class="header"><app-navbar></app-navbar></div>
+<img src="http://i64.tinypic.com/25810td.jpg" alt="logocsyllabus" border="0" width="500px" style="max-width:80%">
+<div style="margin-left:15%;margin-right:15%;text-align:justify"><p>CSyllabus is imagined as a web platform which should ease up process of finding and comparing courses on domestic and foreign faculties. It will enable users to discover and compare courses on interactive way through web application. This “one click” app will save time and provide very useful information to interested parties.</p>
+</div>
+<h2 style="margin:30px;">Our Team</h2> 
+<div class="ourteam">
+    <mat-card class="person">
+        <div>
+          <h2>Matej Vukosav</h2>
+        </div>
+        <img src="http://www.fer.unizg.hr/images/50028139/matej-vukosav.jpg" style="border-radius: 50%;" width="150px" height="150px">
+        <mat-card-content>
+          <h2 style="text-align:center">Product Owner</h2>          
+          <p style="text-align:justify"> I am 24 years old student from Faculty of Electrical Engineering and Computing in Zagreb. Currently on last year studying Software Engineering and Information System. From 2015 I have been working as an Software engineer in different companies , mostly as Android developer. I'm also co-organizer of Google Developers Group Zagreb (GDG Zagreb) and member of Electrical Engineering Student's European Association (EESTEC).
+          </p>
+        </mat-card-content>
+    </mat-card> 
+    <mat-card class="person">
+        <div>
+          <h2>Thomas Benetti</h2>
+        </div>
+        <img src="http://www.fer.unizg.hr/images/50028139/IMG_8461.JPG" style="border-radius: 50%;" width="150px" height="150px">
+        <mat-card-content>
+            <h2 style="text-align:center">Scrum Master</h2>          
+            <p style="text-align:justify">22 years old. I'm an Erasmus student at Polimi in Computer Science and Engineering for 6 months. In France I am an apprentice-engineer in the telecom company Orange.
+                
+                Skills and interests: Software engineer in apprenticeship with the engineering school 3iL Group in the telecom company Orange (France) for more than 2 years now</p>
+        </mat-card-content>
+    </mat-card>    
+    
+    <mat-card class="person">
+        <div>
+            <h2>Emanuel Guberovic</h2>
+          </div>
+        <img src="http://www.fer.unizg.hr/images/50028139/guber.jpg" style="border-radius: 50%" width="150px" height="150px">
+        <mat-card-content>
+            <h2 style="text-align:center">Full Stack Developer</h2>          
+            <p style="text-align:justify"> Last year of master studies in computer engineering at FER, Croatia. Love writing code and wondering why it actually works.</p>
+        </mat-card-content>
+    </mat-card>  
+  <b></b>
+    <mat-card class="person">
+        <div>
+            <h2>Zvonimir Relja</h2>
+          </div>
+        <img src="http://www.fer.unizg.hr/images/50028139/profilna.jpg" style="border-radius: 50%" width="200px" height="200px">
+        <mat-card-content>
+            <h2 style="text-align:center">Full Stack Developer</h2>          
+            <p style="text-align:justify"> 23 years old from Croatia. Currently on second year of Masters in Computer Engineering at FER, Zagreb.</mat-card-content>
+    </mat-card>   
+    <mat-card class="person">
+        <div>
+            <h2>Filip Turčinović </h2>
+          </div>
+        <img src="http://www.fer.unizg.hr/images/50028139/filip.jpg" style="border-radius: 50%" width="200px" height="200px">
+        <mat-card-content>
+          <p>
+          </p>
+        </mat-card-content>
+    </mat-card>   
+    <mat-card class="person">
+        <div>
+            <h2>Adrien Roques</h2>
+          </div>
+        <img src="http://www.fer.unizg.hr/images/50028139/Adrien%20Roques.png" style="border-radius: 50%" width="200px" height="200px">
+        <mat-card-content>
+          <p>
+          </p>
+        </mat-card-content>
+    </mat-card>  
+    <mat-card class="person">
+        <div>
+            <h2>Sebastian Mayoral</h2>
+          </div>
+        <img src="http://www.fer.unizg.hr/images/50028139/indice(1).png" style="border-radius: 50%" width="200px" height="200px">
+        <mat-card-content>
+          <p>
+          </p>
+        </mat-card-content>
+    </mat-card>   
+    <mat-card class="person">
+        <div>
+            <h2>Ivana Bosnić</h2>
+          </div>
+        <img src="http://www.fer.unizg.hr/images/site_5/Ivana.jpg" style="border-radius: 50%" width="200px" height="200px">
+        <mat-card-content>
+          <p>
+          </p>
+        </mat-card-content>
+    </mat-card>  
+    <mat-card class="person">
+        <div>
+            <h2>Raffaela Mirandola</h2>
+          </div>
+        <img src="http://www.fer.unizg.hr/images/site_5/Raffaela.jpg" style="border-radius: 50%" width="200px" height="200px">
+        <mat-card-content>
+          <p>
+          </p>
+        </mat-card-content>
+    </mat-card>  
+</div>
+<app-footer></app-footer>
