--- a/frontend/csyllabus/src/app/core/core.component.html
+++ b/frontend/csyllabus/src/app/core/core.component.html
@@ -2,7 +2,7 @@
 <div class="bgexplorer">
   <img class="variable-background" *ngIf="backgroundImage && backgroundImage != ''" [src]="backgroundImage">
   <div class="core-header">
-      <app-navbar></app-navbar>
+      <app-navbar style="position:absolute;width:100%;right:0;top:0;"></app-navbar>
   </div>
   <div class="container custom-scrollbar" align="center">
     <mat-tab-group (selectedTabChange)="changeResultCard($event)" mat-stretch-tabs >
@@ -20,6 +20,5 @@
     <br>
     <app-result-cards *ngIf="explorerTab" [courses]="explorerResult"></app-result-cards>
     <app-result-cards-comparator *ngIf="comparatorTab" [courses]="comparatorResult"></app-result-cards-comparator>
-
   </div>
 </div>
