--- a/frontend/csyllabus/src/app/components/about/about.component.css
+++ b/frontend/csyllabus/src/app/components/about/about.component.css
@@ -3,18 +3,47 @@
     left: 0;
     position: relative;
 }
-
-@media only screen and (min-width: 800px) {
+h3{
+    color:rgb(47, 75, 131);
+    font-size: 20px;
+}
+.personname{
+    border: 1px;
+}
+h2{
+    padding: 10px;
+    margin-top: 0px;
+    margin-bottom: 5px;
+    color:rgb(65, 65, 65);
+    font-family: 'Roboto', sans-serif;
+}
+.content{
+    margin-left:10px;
+    margin-right:10px;
+}
+.logo{
+    margin-left:15%;
+    margin-right:15%;
+    text-align:justify;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
 .person{
-    width: 30%;
-    float: left;
-    margin-bottom:10px;
-    height: 500px; 
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
+    margin-left: 10px;
+    margin-right: 10px;
+    border: 2px;
+    border-color: black;
 }
-.ourteam{
-    width: 92%;
-    margin-left: 8%!important;
-    margin-right: 8%!important;
-}
-}
+@media only screen and (min-width: 900px) {
+    .person{
+        width: 30%;
+        float: left;
+        min-height: 600px; 
+    }
+    .ourteam{
+        width: 90%;
+        margin-left: 8%!important;
+        margin-right: 8%!important;
+    }
+} 
