--- a/frontend/csyllabus/src/app/components/footer/footer.component.html
+++ b/frontend/csyllabus/src/app/components/footer/footer.component.html
@@ -1,14 +1,12 @@
 <footer class="footer-distributed">
-    
+  
           <div class="footer-right">
-    
-            <a href="#"><i class="fa fa-facebook"></i></a>
-            <a href="#"><i class="fa fa-twitter"></i></a>
-            <a href="#"><i class="fa fa-linkedin"></i></a>
-            <a href="#"><i class="fa fa-github"></i></a>
-    
           </div>
-    
+          <div class="logos">
+              <img style="background:white;border-radius:5px;max-width:33%;margin-left:3px;margin-right:3px;" src="http://larics.rasip.fer.hr/wp-content/uploads/2015/01/fer-logoEN-1-wide.png" height="70px">
+              <img style="background:white;border-radius:5px;max-width:33%;margin-left:3px;margin-right:3px;" src="https://marcobrambillapolimi.files.wordpress.com/2016/12/cropped-polimi-datascience-logo-square1.png" height="70px" >
+              <img style="background:white;border-radius:5px;max-width:33%;margin-left:3px;margin-right:3px;" src="https://goabroad.umbc.edu/_customtags/ct_Image.cfm?Image_ID=49231" height="70px">
+            </div>
           <div class="footer-left">
     
             <p class="footer-links">
@@ -17,9 +15,11 @@
               <a href="#">ABOUT</a>
               ·
               <a href="#">DOCUMENTATION</a>
+              
             </p>
     
             <p>Csyllabus &copy; 2018</p>
+            
           </div>
     
         </footer>
